# dbre_BE

./: .gitignore  .gitmessage.txt  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  dockerfile  dump.rdb  manage.py  pyproject.toml  scheduler.py  test.sh
.github/workflows/: cd.yml  ci-cd.yml  ci.yml
admin_api/: models.py  serializers.py  urls.py  views.py
admin_api/migrations/: 0001_initial.py  0002_adminloginlog_email.py
admin_api/views/: admin_views.py  pay_views.py  reviews_views.py  subs_views.py  user_views.py  views.py
config/: settings.py  urls.py
dbre_BE/: asgi.py  celery.py  scheduler.py  settings.py  urls.py  wsgi.py
dbre_BE/settings/: __init__.py  base.py  local.py  prod.py
deploy/: deploy.sh
nginx/: Dockerfile
nginx/conf.d/: default.conf
payment/: __init__.py  apps.py  models.py  scheduler.py  serializers.py  tasks.py  urls.py  utils.py  views.py
payment/migrations/: 0001_initial.py  0002_alter_pays_imp_uid.py  0003_alter_pays_merchant_uid.py  0004_billingkey.py  0005_billingkey_card_name_billingkey_card_number.py  0006_pays_refund_amount.py  0007_pays_refund_at.py  0008_alter_pays_refund_at.py  0009_alter_pays_subs_alter_pays_user.py
payment/services/: payment_service.py  web_hook_service.py
payment/templates/: payment.html  subscription_payment.html  tally.html
plan/: models.py  serializers.py  views.py
plan/migrations/: 0001_initial.py  0002_alter_plans_is_active.py
prometheus/: prometheus.yml
redis/: redis.conf
reviews/: models.py  serializers.py  views.py
reviews/migrations/: 0001_initial.py
subscription/: models.py  serializers.py  urls.py  views.py
subscription/forms/: subs_form.py
subscription/migrations/: 0001_initial.py  0002_subs_plan.py  0003_subhistories_plan.py  0004_subs_billing_key.py  0005_remove_subs_cancelled_reason_and_more.py  0006_alter_subhistories_status.py  0007_alter_subhistories_plan_alter_subhistories_sub_and_more.py
subscription/temporary/: delete_ver.py
tally/: apps.py  models.py  serializers.py  views.py
tally/migrations/: 0001_initial.py  0002_tally_complete_tally_created_at_tally_form_name.py
term/: models.py  serializers.py  urls.py  views.py
term/migrations/: 0001_initial.py  0002_terms_created_at.py
tests/: conftest.py  test_scheduler.py
user/: apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
user/migrations/: 0001_initial.py  0002_alter_agreements_id.py  0003_customuser_provider.py  0004_customuser_img_url.py  0005_alter_customuser_phone.py  0006_alter_customuser_phone.py  0007_alter_agreements_terms_url.py  0008_alter_customuser_email_alter_customuser_is_staff.py  (+5 more)
(+5 files in other folders)
