[project]
name = "dbre-be"
version = "0.1.0"
description = ""
authors = [
    {name = "limsu1015",email = "tngur1015@gmail.com"}
]
#readme = "README.md"
requires-python = "3.12.6"
dependencies = [
    "django (>=5.1.5,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
drf-spectacular = "^0.28.0"

